[tool.poetry]
name = "technical-test"
version = "0.1.0"
description = ""
authors = ["Laurent Leconte <laurent.leconte@susu.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "5.3.5"
pylint = "^2.14.5"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
