[tool.poetry]
name = "technical-test"
version = "0.2.0"
description = ""
authors = ["Laurent Leconte <laurent.leconte@susu.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.112"
uvicorn = ">=0.18.2"
mypy = ">=0.971"

[tool.poetry.dev-dependencies]
black = ">=22.6.0"
pytest = ">=6.2"
pylint = ">=2.14.5"
requests = ">=2.28.1"
httpx = ">=0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
